Necessary changes to make Java home happy